--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 [x-cloak] {
   display: none !important;
 }
+
+.ql-editor h1,
+.ql-editor h2,
+.ql-editor h3 {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 700;
+}
+
+.ql-editor h4,
+.ql-editor h5,
+.ql-editor h6 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+}
+
+.ql-editor p {
+	font-size: 1rem !important;
+  line-height: 1.5rem !important;
+}
+
+.ql-editor a {
+  color: #0EA5E9 !important;
+  background: #E0F2FE !important;
+  border-radius: 8px;
+}
