--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,32 @@
   background: #E0F2FE !important;
   border-radius: 8px;
 }
+
+.ql-tooltip {
+  transform: translateX(-50%) !important;
+  background: #F8FAFC !important;
+  color: #64748b !important;
+  position: absolute !important;
+  top: 12px !important;
+  left: 50% !important;
+  border: 0px !important;
+  font-size: 14px !important;
+  border-radius: 8px !important;
+}
+
+.ql-tooltip > input {
+  font-size: 14px !important;
+  border-radius: 6px !important;
+  outline-color: #0ea5e9 !important;
+  background: #F8FAFC !important;
+  color: #64748b !important;
+}
+
+.ql-tooltip {
+  font-size: 14px !important;
+  color: #64748b !important;
+}
+
+.ql-action, .ql-remove, .ql-preview {
+  color: #0ea5e9 !important;
+}
